--- a/index.html
+++ b/index.html
@@ -5,34 +5,173 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DeMiATi Welcomes You</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <svg
-      width="16"
-      height="16"
-      viewBox="0 0 145.68199 167.31084"
-      version="1.1"
-      id="svg5"
-      xmlns="http://www.w3.org/2000/svg"
-      xmlns:svg="http://www.w3.org/2000/svg"
-    >
-      <defs id="defs2" />
-      <g id="layer1" transform="translate(-26.642277,-53.927771)">
-        <g id="g6374" transform="rotate(-59.842491,99.483335,93.133325)">
-          <path
-            id="path4174"
-            style="
-              opacity: 1;
-              fill: currentColor;
-              stroke-width: 0.265;
-              stroke-dasharray: none;
-            "
-            d="M 133.61239,73.833254 C 133.19607,73.107631 62.113741,31.810143 61.277183,31.807868 c -0.836565,-0.0023 -72.142156,40.907453 -72.562408,41.630802 -0.420253,0.723348 -0.643781,82.93039 -0.227468,83.65602 0.416311,0.72562 71.498376,42.02312 72.33494,42.02539 0.836561,0.002 72.142423,-40.90746 72.562673,-41.63081 0.42025,-0.72335 0.64379,-82.930394 0.22747,-83.656016 z m -3.69232,1.709623 c 0.39361,0.691199 0.18264,78.998883 -0.2147,79.687913 -0.39733,0.68903 -67.814922,39.65851 -68.605871,39.65635 -0.79095,-0.002 -67.9970338,-39.3401 -68.3906455,-40.0313 -0.3936108,-0.6912 -0.1826348,-78.998884 0.2147019,-79.687916 0.3973377,-0.689032 67.8149176,-39.658063 68.6058666,-39.655896 0.790949,0.0022 67.997028,39.339649 68.390648,40.030849 z m -17.65008,20.47803 -6.02559,1.136658 a 5.7410584,22.755591 71.176 0 0 -16.312109,3.502255 l -4.5e-4,2.6e-4 a 5.7410584,22.755591 71.176 0 0 -16.046195,7.55399 l -6.217689,1.79151 2.719568,9.44005 0.1301,-0.0374 a 27.464804,22.940372 87.54131 0 0 2.157295,5.66625 c -7.713031,0.28154 -16.094926,0.13997 -23.826455,-0.38901 a 22.953172,27.449487 2.7789864 0 0 1.823402,-4.83363 22.953172,27.449487 2.7789864 0 0 0.406343,-1.67883 l 2.432904,-7.75408 -8.024858,-2.51823 A 22.845536,5.7184556 21.410425 0 0 32.054632,101.26124 22.845536,5.7184556 21.410425 0 0 17.451019,97.209769 l 0.0019,-0.0059 -7.6076047,-2.264035 -1.3056211,4.38758 a 22.953172,27.449487 2.7789864 0 0 -1.3570981,3.781556 22.953172,27.449487 2.7789864 0 0 14.3591669,34.50303 22.953172,27.449487 2.7789864 0 0 5.398225,1.22643 c 6.184507,1.21547 19.036146,3.36961 34.729517,3.8957 18.476424,0.61939 30.725435,-3.14015 34.298329,-4.41033 a 27.464804,22.940372 87.54131 0 0 2.807138,-0.71299 27.464804,22.940372 87.54131 0 0 15.511529,-33.81642 27.464804,22.940372 87.54131 0 0 -1.31842,-4.074384 l -0.0708,-0.374848 a 5.7410584,22.755591 71.176 0 0 -0.0157,-0.309995 5.7410584,22.755591 71.176 0 0 -0.0698,-0.145898 z"
-          />
-        </g>
-      </g>
-    </svg>
+    <nav class="navbar navbar-expand-lg bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled">Disabled</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div id="main">
+      <h1>Welcome</h1>
+      <div class="row">
+        <div id="previewbox" class="container col-sm-12 col-md-6">
+          <div
+            id="carouselExampleCaptions"
+            class="carousel slide"
+            data-bs-ride="false"
+          >
+            <div class="carousel-indicators">
+              <button
+                type="button"
+                data-bs-target="#carouselExampleCaptions"
+                data-bs-slide-to="0"
+                class="active"
+                aria-current="true"
+                aria-label="Slide 1"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleCaptions"
+                data-bs-slide-to="1"
+                aria-label="Slide 2"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleCaptions"
+                data-bs-slide-to="2"
+                aria-label="Slide 3"
+              ></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="..." class="d-block w-100" alt="..." />
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>First slide label</h5>
+                  <p>
+                    Some representative placeholder content for the first slide.
+                  </p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="..." class="d-block w-100" alt="..." />
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Second slide label</h5>
+                  <p>
+                    Some representative placeholder content for the second
+                    slide.
+                  </p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="..." class="d-block w-100" alt="..." />
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Third slide label</h5>
+                  <p>
+                    Some representative placeholder content for the third slide.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide="prev"
+            >
+              <span
+                class="carousel-control-prev-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide="next"
+            >
+              <span
+                class="carousel-control-next-icon"
+                aria-hidden="true"
+              ></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+        <div id="userbox" class="container col-sm-12 col-md-6">
+          <h2>Sign Up or Sign In!</h2>
+          <div id="buttons" class="row">
+            <button class="col-12">I have an Account</button>
+            <button class="col-12">I'm new here</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <div id="iconbox">
+        <a>
+          <svg
+            width="30"
+            height="30"
+            viewBox="0 0 145.68199 167.31084"
+            version="1.1"
+            id="svg5"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:svg="http://www.w3.org/2000/svg"
+          >
+            <defs id="defs2" />
+            <g id="layer1" transform="translate(-26.642277,-53.927771)">
+              <g id="g6374" transform="rotate(-59.842491,99.483335,93.133325)">
+                <path
+                  id="path4174"
+                  style="
+                    opacity: 1;
+                    fill: currentColor;
+                    stroke-width: 0.265;
+                    stroke-dasharray: none;
+                  "
+                  d="M 133.61239,73.833254 C 133.19607,73.107631 62.113741,31.810143 61.277183,31.807868 c -0.836565,-0.0023 -72.142156,40.907453 -72.562408,41.630802 -0.420253,0.723348 -0.643781,82.93039 -0.227468,83.65602 0.416311,0.72562 71.498376,42.02312 72.33494,42.02539 0.836561,0.002 72.142423,-40.90746 72.562673,-41.63081 0.42025,-0.72335 0.64379,-82.930394 0.22747,-83.656016 z m -3.69232,1.709623 c 0.39361,0.691199 0.18264,78.998883 -0.2147,79.687913 -0.39733,0.68903 -67.814922,39.65851 -68.605871,39.65635 -0.79095,-0.002 -67.9970338,-39.3401 -68.3906455,-40.0313 -0.3936108,-0.6912 -0.1826348,-78.998884 0.2147019,-79.687916 0.3973377,-0.689032 67.8149176,-39.658063 68.6058666,-39.655896 0.790949,0.0022 67.997028,39.339649 68.390648,40.030849 z m -17.65008,20.47803 -6.02559,1.136658 a 5.7410584,22.755591 71.176 0 0 -16.312109,3.502255 l -4.5e-4,2.6e-4 a 5.7410584,22.755591 71.176 0 0 -16.046195,7.55399 l -6.217689,1.79151 2.719568,9.44005 0.1301,-0.0374 a 27.464804,22.940372 87.54131 0 0 2.157295,5.66625 c -7.713031,0.28154 -16.094926,0.13997 -23.826455,-0.38901 a 22.953172,27.449487 2.7789864 0 0 1.823402,-4.83363 22.953172,27.449487 2.7789864 0 0 0.406343,-1.67883 l 2.432904,-7.75408 -8.024858,-2.51823 A 22.845536,5.7184556 21.410425 0 0 32.054632,101.26124 22.845536,5.7184556 21.410425 0 0 17.451019,97.209769 l 0.0019,-0.0059 -7.6076047,-2.264035 -1.3056211,4.38758 a 22.953172,27.449487 2.7789864 0 0 -1.3570981,3.781556 22.953172,27.449487 2.7789864 0 0 14.3591669,34.50303 22.953172,27.449487 2.7789864 0 0 5.398225,1.22643 c 6.184507,1.21547 19.036146,3.36961 34.729517,3.8957 18.476424,0.61939 30.725435,-3.14015 34.298329,-4.41033 a 27.464804,22.940372 87.54131 0 0 2.807138,-0.71299 27.464804,22.940372 87.54131 0 0 15.511529,-33.81642 27.464804,22.940372 87.54131 0 0 -1.31842,-4.074384 l -0.0708,-0.374848 a 5.7410584,22.755591 71.176 0 0 -0.0157,-0.309995 5.7410584,22.755591 71.176 0 0 -0.0698,-0.145898 z"
+                />
+              </g>
+            </g>
+          </svg>
+        </a>
+      </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
