--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
+  <!--It Begins-->
   <body>
     <nav class="navbar-expand-lg">
-      <div class="container-fluid d-flex">
+      <div id="namebox" class="container-fluid d-flex">
         <a class="navbar-brand d-flex align-content-center mr-3" href="#"
           ><p class="m-0 py-2">DeMeATi</p>
         </a>
@@ -28,7 +29,10 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" style="width: 60%" id="navbarNav">
+        <div
+          class="collapse navbar-collapse justify-content-center"
+          id="navbarNav"
+        >
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -46,9 +50,10 @@
         </div>
       </div>
     </nav>
+    <!--Main Box-->
     <div id="main" class="p-1">
       <h1>Welcome</h1>
-      <div class="container my-2">
+      <div class="container m-5">
         <div class="row">
           <div id="previewbox" class="container col-sm-12 col-md-6">
             <div
