--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           </div>
           <div id="userbox" class="container col-sm-12 col-md-6 p-3 rounded">
             <div class="row p-3 justify-content-center">
-              <h2 class="p-0 text-center">Sign Up or Sign In!</h2>
+              <h2 class="p-0 text-center">Hello there!</h2>
               <div id="buttons" class="row">
                 <button class="btn affirm rounded-pill col-12 mb-2">
                   I have an Account
